# HELICS-Characterization-Tests

./: CONTRIBUTING.md  CONTRIBUTORS.md  Helics_scalability_test_12-19 .xlsx  README.md  helicsTestSuite.py
Python /ManyToOneFederateTests/: Json_create.py  ReadMe  echoer.py  sender.py
Python/ManyToOneFederateTests/: Json_create.py  ReadMe  echoer.py  sender.py
Python/MeshedTopologyFederateTests/: Json_create.py  ReadME  fedKill.sh  federate.py  meshGen.sh
cpp/: ReadME
cpp/meshedTopologyFedGen/: CMakeLists.txt  fedGen.sh  fedKill.sh  valueFed  valueFed.cpp
federates/: CMakeLists.txt  logging.hpp  testFedFNCS.cpp  testFedHELICS.cpp
